force-app/main/default/objects/Shipment__c/Shipment__c.object-meta.xml
<CustomObject>
    <description>Central record tracking cargo delivery from origin to destination</description>
    <label>Shipment</label>
    <nameField>
        <displayFormat>SHIP-{0000}</displayFormat>
        <label>Shipment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shipments</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>