force-app/main/default/objects/Shipment__c/fields/Actual_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Delivery_Date__c</fullName>
    <description>The actual date and time when the cargo was successfully delivered to the destination</description>
    <label>Actual Delivery Date</label>
    <type>DateTime</type>
</CustomField>