force-app/main/default/objects/Shipment__c/fields/Actual_Pickup_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Pickup_Date__c</fullName>
    <description>The actual date and time when the cargo was collected from the origin</description>
    <label>Actual Pickup Date</label>
    <type>DateTime</type>
</CustomField>