force-app/main/default/objects/Shipment__c/fields/Assigned_Agent__c.field-meta.xml
<CustomField>
    <fullName>Assigned_Agent__c</fullName>
    <description>Freight agent handling this shipment</description>
    <label>Assigned Agent</label>
    <referenceTo>Agent__c</referenceTo>
    <relationshipLabel>Shipments</relationshipLabel>
    <relationshipName>Shipments</relationshipName>
    <type>Lookup</type>
</CustomField>