force-app/main/default/objects/Shipment__c/fields/Cargo_Count__c.field-meta.xml
<CustomField>
    <fullName>Cargo_Count__c</fullName>
    <description>Count of cargo items in this shipment</description>
    <label>Cargo Count</label>
    <summaryForeignKey>Cargo__c.Shipment__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>