force-app/main/default/objects/Shipment__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Customer contact person for this shipment</description>
    <label>Contact Person</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>IFTC Shipments</relationshipLabel>
    <relationshipName>IFTC_Shipments</relationshipName>
    <type>Lookup</type>
</CustomField>