force-app/main/default/objects/Shipment__c/fields/Customs_Status__c.field-meta.xml
<CustomField>
    <fullName>Customs_Status__c</fullName>
    <description>Current status of customs clearance for this shipment</description>
    <label>Customs Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Under Review</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Additional Documentation Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>