force-app/main/default/objects/Shipment__c/fields/Destination_Planet__c.field-meta.xml
<CustomField>
    <fullName>Destination_Planet__c</fullName>
    <description>Planet where shipment will be delivered</description>
    <label>Destination Planet</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>