force-app/main/default/objects/Shipment__c/fields/Destination_System__c.field-meta.xml
<CustomField>
    <fullName>Destination_System__c</fullName>
    <description>The planetary system where the shipment will be delivered</description>
    <label>Destination System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sol System (Earth)</fullName>
            </value>
            <value>
                <fullName>Alpha Centauri</fullName>
            </value>
            <value>
                <fullName>Proxima Centauri</fullName>
            </value>
            <value>
                <fullName>Sirius System</fullName>
            </value>
            <value>
                <fullName>Barnard&apos;s Star</fullName>
            </value>
            <value>
                <fullName>Wolf 359</fullName>
            </value>
            <value>
                <fullName>Tau Ceti</fullName>
            </value>
            <value>
                <fullName>Epsilon Eridani</fullName>
            </value>
            <value>
                <fullName>Kepler-442 System</fullName>
            </value>
            <value>
                <fullName>TRAPPIST-1 System</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>