force-app/main/default/objects/Shipment__c/fields/Discount__c.field-meta.xml
<CustomField>
    <fullName>Discount__c</fullName>
    <description>Discount percentage applied to shipment</description>
    <label>Discount</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>