force-app/main/default/objects/Shipment__c/fields/Distance_Light_Years__c.field-meta.xml
<CustomField>
    <fullName>Distance_Light_Years__c</fullName>
    <description>Distance between origin and destination in light-years for fuel calculation</description>
    <label>Distance (Light-Years)</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>