force-app/main/default/objects/Shipment__c/fields/ETA__c.field-meta.xml
<CustomField>
    <fullName>ETA__c</fullName>
    <description>Estimated Time of Arrival at destination</description>
    <label>ETA</label>
    <type>DateTime</type>
</CustomField>