force-app/main/default/objects/Shipment__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Opportunity that generated this shipment</description>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>IFTC Shipments</relationshipLabel>
    <relationshipName>IFTC_Shipments</relationshipName>
    <type>Lookup</type>
</CustomField>