force-app/main/default/objects/Shipment__c/fields/Origin_Planet__c.field-meta.xml
<CustomField>
    <fullName>Origin_Planet__c</fullName>
    <description>Planet where shipment originates</description>
    <label>Origin Planet</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>