force-app/main/default/objects/Shipment__c/fields/Shipping_Method__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Method__c</fullName>
    <description>Method of interplanetary transport</description>
    <label>Shipping Method</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hyperspace Express</fullName>
            </value>
            <value>
                <fullName>Standard Warp</fullName>
                <default>true</default>
                <label>Standard Warp</label>
            </value>
            <value>
                <fullName>Cargo Freighter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>