force-app/main/default/objects/Shipment__c/fields/Total_Weight__c.field-meta.xml
<CustomField>
    <fullName>Total_Weight__c</fullName>
    <description>Sum of all cargo weights for this shipment</description>
    <label>Total Weight (Metric Tons)</label>
    <summarizedField>Cargo__c.Weight__c</summarizedField>
    <summaryForeignKey>Cargo__c.Shipment__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>