force-app/main/default/objects/Shipment__c/validationRules/ETA_Must_Be_After_Departure_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>ETA_Must_Be_After_Departure_Date</fullName>
    <active>true</active>
    <description>Ensures that the Estimated Time of Arrival (ETA) is after the Departure Date</description>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Departure_Date__c)),
    NOT(ISBLANK(ETA__c)),
    ETA__c &lt;= Departure_Date__c
)</errorConditionFormula>
    <errorDisplayField>ETA__c</errorDisplayField>
    <errorMessage>ETA must be after the Departure Date. Please select a valid arrival date.</errorMessage>
</ValidationRule>